# smartipedia

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py  models.py
backend/app/routes/: api.py  auth.py  pages.py
backend/app/services/: llm.py  moderation.py  search.py  topics.py
backend/app/templates/: base.html
backend/app/templates/components/: quick_search_results.html  search_results.html
backend/app/templates/pages/: edit.html  generating.html  graph.html  home.html  journeys.html  search.html  signin.html  stats.html  suggest.html  topic.html  topic_not_found.html
searxng/: settings.yml
static/css/: style.css
static/js/: smartipedia.js
