[project]
name = "smartipedia"
version = "0.1.0"
description = "Open-source AI-generated encyclopedia with emergent knowledge graphs"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "python-slugify>=8.0.0",
    "alembic>=1.13.0",
    "markdown>=3.5.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]
